# RockchipRepacker

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: rkimg.c
